[tool.poetry]
name = "demos"
version = "0.1.0"
description = ""
authors = ["Willi <willi@untitleddata.company>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
dlt = {version = "=0.4.7", extras = ["cli", "duckdb"]}

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"
streamlit = "^1.31.1"
psutil = "~5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
